# TFM

./: .gitignore  .mailmap  CITATION.cff  LICENSE  NOTICE  README.md  detection_node_LEGS  package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
person_follower/: DOUBLE_PUBLISHER  NODOS  NODOS.md  REFINADO_detection_node  USER_INTERFACE_CAMERA.py
person_follower/BASE/: VERSION 1.0
person_follower/ORB-SLAM3/config/: camera_config.yaml
person_follower/Old/: SEGUIMIENTO-VERSION ESTABLE  person_follower.py
person_follower/Old/BASE/: VERSION 1.0  VERSION 2.0
person_follower/Old/pruebas/: GIRO+LIMITACION  (+2 more)
person_follower/SLAM_node/: SLAM_node.py  slam_node.py
person_follower/camera/: camera_viewer.py
person_follower/camera_node/: GESTOS.py  camera_node.py
person_follower/collision_handling_node/: collision_handling_node.py
person_follower/config/: .config.yaml.swp  config.yaml  user_interface.rviz
person_follower/control_node/: AUTOSTART.py  C_man.py  FSM  PRUEBA_GESTO.py  cierre_seguro.py  control_node.py
person_follower/detection_node/: CLUSTERS.py  PRUEBA_DETECCION.py  VARIAS_PERSONAS.py  detection_node.py
person_follower/launch/: start_person_follower.launch.py
person_follower/openpose_node/: openpose_node.py
person_follower/tracking_node/: DWA.py  KALMAN_FILTER.py  tracking_node.py
person_follower/user_interface_node/: UI.py  UI_man.py  dashboard  user_interface_node.py
person_follower/visual_detection_node/: visual_detection_node.py
rviz/: camera.rviz  config.rviz  tb2.rviz
(+16 files in other folders)
